--- a/Project Explained.ipynb
+++ b/Project Explained.ipynb
@@ -446,15 +446,8 @@
     "## 6. Conclusion\n",
     "\n",
     "We can conclude that it was possible, using Pyhton Language, to create a simplified systhem for the collisions of particles confined in a box, as well as the animation to illustrate it. With that initial systhem, we can use statistical tools in order to quantitatively analyse a physical system. \n",
-    "The problem that we were interested in was the mixing of two types of particles. We verified that we were able to create two colors of particles in the animation, and to analyse them using the Kolmogorov-Smirnov Test. We then ran a series of analysis variating different parameters, such as the number of particles in the box, radius of the particles and box size. Finally, we can also graph and visualise the evolution of the statistical and p-value over time, as to follow the process of homogenization. That way, *we were able to successfully create, visualise and characterize a molecular dynamics system**."
+    "The problem that we were interested in was the mixing of two types of particles. We verified that we were able to create two colors of particles in the animation, and to analyse them using the Kolmogorov-Smirnov Test. We then ran a series of analysis variating different parameters, such as the number of particles in the box, radius of the particles and box size. Finally, we can also graph and visualise the evolution of the statistical and p-value over time, as to follow the process of homogenization. That way, **we were able to successfully create, visualise and characterize a molecular dynamics system**."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
